--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,20 +1,27 @@
 @{
     ViewData["Title"] = "Iniciar Sesión";
     ViewData["mostrarHeaderLanding"] = true;
+    ViewData["mostrarHeaderTutor"] = false;
+    ViewData["mostrarHeaderPerteneciente"] = false;
 }
 
+
 <div class="login-background">
-    <div class="circle circle-top"></div>
-    <div class="circle circle-bottom"></div>
+ <div class="circle circle-top-left"></div>
+    <div class="circle circle-bottom-left"></div>
+    <div class="circle circle-top-right"></div>
+    <div class="circle circle-bottom-right"></div>
 
     <div class="login-container">
         <div class="login-header">
-            <img src="~/Content/Images/logo_tandem.png" alt="Logo Tándem" class="logo-login">
+            <img src="~/Imagenes/LOGO3.jpg" alt="Logo Tándem" class="logo-login">
             <h2>Avanzamos Juntos</h2>
         </div>
 
+
         <div class="login-box">
             <h1>Iniciar Sesión</h1>
+
 
             <form method="post" action='@Url.Action("LogIn2", "Account")'>
                 <div class="input-group">
@@ -22,21 +29,45 @@
                     <input type="text" name="userName" placeholder="Nombre de usuario" required>
                 </div>
 
+
                 <div class="input-group">
                     <i class="fa fa-lock"></i>
                     <input type="password" name="contraseña" placeholder="Contraseña" required>
                 </div>
 
+
                 <a href="#" class="forgot">¿Te olvidaste tu contraseña?</a>
+
 
                 <button type="submit" class="btn-login">Iniciar Sesión</button>
 
-                <div class="social-login">
-                    <img src="~/Content/Images/google.png" alt="Google" class="social-icon">
-                    <img src="~/Content/Images/facebook.png" alt="Facebook" class="social-icon">
-                    <img src="~/Content/Images/apple.png" alt="Apple" class="social-icon">
+
+               <div class="social-login">
+                    <button class="social-btn" aria-label="Iniciar sesión con Google">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/>
+                            <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/>
+                            <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/>
+                            <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
+                        </svg>
+                    </button>
+
+
+                    <button class="social-btn" aria-label="Iniciar sesión con Facebook">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" fill="#1877F2"/>
+                        </svg>
+                    </button>
+
+
+                    <button class="social-btn" aria-label="Iniciar sesión con Apple">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M17.05 20.28c-.98.95-2.05.8-3.08.35-1.09-.46-2.09-.48-3.24 0-1.44.62-2.2.44-3.06-.35C2.79 15.25 3.51 7.59 9.05 7.31c1.35.07 2.29.74 3.08.8 1.18-.24 2.31-.93 3.57-.84 1.51.12 2.65.72 3.4 1.8-3.12 1.87-2.38 5.98.48 7.13-.57 1.5-1.31 2.99-2.54 4.09zM12.03 7.25c-.15-2.23 1.66-4.07 3.74-4.25.29 2.58-2.34 4.5-3.74 4.25z"/>
+                        </svg>
+                    </button>
                 </div>
             </form>
+
 
             <p class="no-account">
                 ¿No tienes cuenta?
