--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,9 +17,11 @@
 <body>
 @{
     bool mostrarHeaderLanding = ViewData["mostrarHeaderLanding"] as bool? ?? false;
+    bool mostrarHeaderPerteneciente = ViewData["mostrarHeaderPerteneciente"] as bool? ?? false;
+    bool mostrarHeaderTutor = ViewData["mostrarHeaderTutor"] as bool? ?? false;
 }
     <header>
-    @if(!mostrarHeaderLanding)
+    @if(mostrarHeaderPerteneciente)
     {
     <nav class="navbar-custom">
         <div class="nav-left">
@@ -50,7 +52,44 @@
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item"><a href='@Url.Action("Home", "Home")' class="nav-link active">Home</a></li>
                 <li class="nav-item"><a href='@Url.Action("Favoritos", "Home")' class="nav-link">Favoritos</a></li>
-                <li class="nav-item"><a href='@Url.Action("Estadisticas", "Home")' class="nav-link">Estadisticas </a></li>
+                <li class="nav-item"><a href='@Url.Action("IrAPreviewEstadisticas", "Home")' class="nav-link">Estadisticas </a></li>
+                <li class="nav-item"><a href='@Url.Action("Ayuda", "Home")' class="nav-link">Ayuda</a></li>
+                <li class="nav-item"><a href='@Url.Action("Perfil", "Home")' class="nav-link">Mi perfil</a></li>
+                <li class="nav-item"><a href='@Url.Action("CerrarSesion", "Home")' class="nav-link">Cerrar sesión</a></li>
+            </ul>
+        </div>
+    </div>
+    }else if(mostrarHeaderTutor){
+        <nav class="navbar-custom">
+        <div class="nav-left">
+        <a href= '@Url.Action("Home", "Home")' class="btn btn-hero">   <img src="~/Imagenes/Logo.png" alt="Logo Tandem" class="nav-logo"></a>
+        </div>
+
+        <div class="nav-center">
+            <a href='@Url.Action("Estadisticas", "Home")' class="nav-btn">ESTADISTICAS</a>
+            <a href='@Url.Action("Nosotros", "Home")' class="nav-btn">NOSOTROS</a>
+        </div>
+
+        <div class="nav-right">
+            <i class="fa-solid fa-user nav-icon"></i>
+            <i class="fa-solid fa-bell nav-icon"></i>
+            <button class="menu-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+        </div>
+    </nav>
+
+    <!-- Menú lateral -->
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
+        </div>
+        <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item"><a href='@Url.Action("Home", "Home")' class="nav-link active">Home</a></li>
+                <li class="nav-item"><a href='@Url.Action("Favoritos", "Home")' class="nav-link">Favoritos</a></li>
+                <li class="nav-item"><a href='@Url.Action("IrAPreviewEstadisticas", "Home")' class="nav-link">Estadisticas </a></li>
                 <li class="nav-item"><a href='@Url.Action("Ayuda", "Home")' class="nav-link">Ayuda</a></li>
                 <li class="nav-item"><a href='@Url.Action("Perfil", "Home")' class="nav-link">Mi perfil</a></li>
                 <li class="nav-item"><a href='@Url.Action("CerrarSesion", "Home")' class="nav-link">Cerrar sesión</a></li>
@@ -58,22 +97,27 @@
         </div>
     </div>
     }
-    else
+    else if (mostrarHeaderLanding)
     {
-<nav class="navbar bg-body-tertiary">
-              <div class="container-fluid d-flex justify-content-between align-items-center">
-                <a class="navbar-brand">
-                  <img src="~/Imagenes/Logo.png" alt="Logo">
-                </a>
-             <form asp-controller="Account" asp-action="LogIn1" method="get">
-                    <button type="submit" class="nav-btn">Iniciar Sesión</button>
-                </form>
-                <form asp-controller="Account" asp-action="Registrarse1" method="get">
-                    <button type="submit" class="nav-btn">Registrarse</button>
-                </form>
-                  
-            </div>
-        </nav>
+        <nav class="custom-header">
+    <div class="header-container">
+        
+        <a class="header-logo" asp-controller="Home" asp-action="Index">
+            <img src="~/Imagenes/Logo.png" alt="Logo">
+        </a>
+
+        <div class="header-buttons">
+            <form asp-controller="Account" asp-action="LogIn1" method="get">
+                <button type="submit" class="header-btn">Iniciar Sesión</button>
+            </form>
+
+            <form asp-controller="Account" asp-action="Registrarse1" method="get">
+                <button type="submit" class="header-btn">Registrarse</button>
+            </form>
+        </div>
+
+    </div>
+</nav>
     }
 </header>
 
@@ -95,11 +139,10 @@
             </div>
 
             <div class="footer-social">
-                <a href="#" class="social-icon">𝕏</a>
-                <a href="#" class="social-icon">📷</a>
-                <a href="#" class="social-icon">f</a>
-            </div>
-        </div>
+    <a href="#" class="social-icon"><i class="fa-brands fa-x-twitter"></i></a>
+    <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+    <a href="#" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
+       </div>
 
         <div class="footer-bottom">
             © 2025 Tándem. Todos los derechos reservados.
@@ -112,30 +155,8 @@
 
 
 
-   
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
-    @* INICIO: CÓDIGO PARA REGISTRAR EL TIEMPO AL CERRAR SESIÓN/PESTAÑA *@
-    @if(!mostrarHeaderLanding)
-    {
-    <script>
-        window.addEventListener('beforeunload', function (e) {
-            const tiempoFinMs = new Date().getTime(); 
-            const xhr = new XMLHttpRequest();
-            
-            // La URL llama al método en el HomeController
-            // El 'false' hace la petición SÍNCRONA, forzando al navegador a esperar
-            xhr.open('POST', '@Url.Action("RegistrarTiempoSesion", "Home")', false); 
-            
-            xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-            
-            // El nombre del parámetro 'tiempoFinMs' coincide con el del método C#
-            const data = `tiempoFinMs=${tiempoFinMs}`; 
-            
-            xhr.send(data); 
-        });
-    </script>
-    }
 </body>
 
 </html>
