terminado estadisticas, todas la preguntas tienen imagen, flata estiliar, falta cambiar la ghome dependiendo el tipo de user, creanos que posta estan todas las fotos

--- a/Views/Home/Correcto.cshtml
+++ b/Views/Home/Correcto.cshtml
@@ -1,5 +1,14 @@
 @{
     ViewData["Title"] = "Fin del Juego";
+    if(ViewBag.usuario.tipoUsuario == "perteneciente"){
+    ViewData["mostrarHeaderLanding"] = false;
+    ViewData["mostrarHeaderTutor"] = false;
+    ViewData["mostrarHeaderPerteneciente"] = true;
+    } else{
+    ViewData["mostrarHeaderLanding"] = false;
+    ViewData["mostrarHeaderTutor"] = true;
+    ViewData["mostrarHeaderPerteneciente"] = false;
+    }
 }
 
 <div style="text-align: center; margin-top: 50px;">
