--- a/Views/Home/Ayuda.cshtml
+++ b/Views/Home/Ayuda.cshtml
@@ -1,5 +1,14 @@
 @{
     ViewData["Title"] = "Ayuda";
+    if(ViewBag.usuario.tipoUsuario == "perteneciente"){
+    ViewData["mostrarHeaderLanding"] = false;
+    ViewData["mostrarHeaderTutor"] = false;
+    ViewData["mostrarHeaderPerteneciente"] = true;
+    } else{
+    ViewData["mostrarHeaderLanding"] = false;
+    ViewData["mostrarHeaderTutor"] = true;
+    ViewData["mostrarHeaderPerteneciente"] = false;
+    }
 }
 <div class="faq-container-wrapper">
     <div class="faq-container">
