--- a/Views/Home/previewJuego.cshtml
+++ b/Views/Home/previewJuego.cshtml
@@ -1,5 +1,14 @@
 @{
     ViewData["Title"] = "Perfil";
+    if(ViewBag.usuario.tipoUsuario == "perteneciente"){
+    ViewData["mostrarHeaderLanding"] = false;
+    ViewData["mostrarHeaderTutor"] = false;
+    ViewData["mostrarHeaderPerteneciente"] = true;
+    } else{
+    ViewData["mostrarHeaderLanding"] = false;
+    ViewData["mostrarHeaderTutor"] = true;
+    ViewData["mostrarHeaderPerteneciente"] = false;
+    }
 }
 
 <!DOCTYPE html>
@@ -53,4 +62,3 @@
 
 </body>
 </html>
->
