--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -52,7 +52,6 @@
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item"><a href='@Url.Action("Home", "Home")' class="nav-link active">Home</a></li>
                 <li class="nav-item"><a href='@Url.Action("Favoritos", "Home")' class="nav-link">Favoritos</a></li>
-                <li class="nav-item"><a href='@Url.Action("IrAPreviewEstadisticas", "Home")' class="nav-link">Estadisticas </a></li>
                 <li class="nav-item"><a href='@Url.Action("Ayuda", "Home")' class="nav-link">Ayuda</a></li>
                 <li class="nav-item"><a href='@Url.Action("Perfil", "Home")' class="nav-link">Mi perfil</a></li>
                 <li class="nav-item"><a href='@Url.Action("CerrarSesion", "Home")' class="nav-link">Cerrar sesión</a></li>
@@ -66,7 +65,7 @@
         </div>
 
         <div class="nav-center">
-            <a href='@Url.Action("Estadisticas", "Home")' class="nav-btn">ESTADISTICAS</a>
+            <a href='@Url.Action("IrAPreviewEstadisticas", "Home")' class="nav-btn">ESTADISTICAS</a>
             <a href='@Url.Action("Nosotros", "Home")' class="nav-btn">NOSOTROS</a>
         </div>
 
@@ -89,7 +88,6 @@
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item"><a href='@Url.Action("Home", "Home")' class="nav-link active">Home</a></li>
                 <li class="nav-item"><a href='@Url.Action("Favoritos", "Home")' class="nav-link">Favoritos</a></li>
-                <li class="nav-item"><a href='@Url.Action("IrAPreviewEstadisticas", "Home")' class="nav-link">Estadisticas </a></li>
                 <li class="nav-item"><a href='@Url.Action("Ayuda", "Home")' class="nav-link">Ayuda</a></li>
                 <li class="nav-item"><a href='@Url.Action("Perfil", "Home")' class="nav-link">Mi perfil</a></li>
                 <li class="nav-item"><a href='@Url.Action("CerrarSesion", "Home")' class="nav-link">Cerrar sesión</a></li>
