--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -82,7 +82,7 @@
         <div class="testimonials-grid">
 
             <div class="testimonial-card">
-                <div class="testimonial-avatar-placeholder">📸</div>
+                <div class="testimonial-avatar-placeholder"><img src="~/Imagenes/Testimonio1.png" alt="Testimonio1"></div>
                 <h3>Carla Díaz</h3>
                 <p>Desde que usó Tándem, mi hijo prepara solo su mochila antes de ir al colegio.</p>
                 <div class="testimonial-stars">
@@ -93,7 +93,7 @@
             </div>
 
             <div class="testimonial-card">
-                <div class="testimonial-avatar-placeholder">📸</div>
+                <div class="testimonial-avatar-placeholder"><img src="~/Imagenes/Testimonio2.png" alt="Testimonio2"></div>
                 <h3>Juan Gomez</h3>
                 <p>Ahora puede seguir sus rutinas sin que yo tenga que recordarle cada paso. Se lo nota más independiente.</p>
                 <div class="testimonial-stars">
@@ -104,7 +104,7 @@
             </div>
 
             <div class="testimonial-card">
-                <div class="testimonial-avatar-placeholder">📸</div>
+                <div class="testimonial-avatar-placeholder"><img src="~/Imagenes/Testimonio3.png" alt="Testimonio3"></div>
                 <h3>Faustina Lopez</h3>
                 <p>Como profesional, las estadísticas de Tándem me ayudan a entender mejor a mis alumnos y ajustar el acompañamiento.</p>
                 <div class="testimonial-stars">
@@ -125,5 +125,5 @@
         </div>
 
         <h2>Cada paso cuenta, no estás solo.</h2>
-        <a href='@Url.Action("Registrarse1", "Account")' class="btn btn-cta">Registrarte y avancemos juntos</a>
+        <a href='@Url.Action("Registrarse1", "Account")' class="btn-cta">Registrarte y avancemos juntos</a>
     </section>
